fix: tabble-responsiv-sm

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
       </div> <!--row -->
 
-      <table class="table table-responsive table-bordered mr-5">
+      <table class="table table-responsive-sm table-bordered">
        <thead>
         <tr>
           <th>Название работы</th>
@@ -151,7 +151,6 @@
           <td class="text-primary">Васильев М.Г.</td>
           <td class="text-primary">67%</td>
         </tr>
-
       </tbody>
     </table>
     </div>
